# grpc

./: README.md
cpp/: CMakeLists.txt  server.cpp
nodes/nodeA/: client.py  config.json  data_pb2.py  data_pb2_grpc.py
nodes/nodeB/: CMakeLists.txt  config.json  server.cpp
nodes/nodeC/: config.json  server.cpp
nodes/nodeD/: CMakeLists.txt  config.json  server.cpp
nodes/nodeE/: server.cpp
protos/: data.proto
python/: client.py  data_pb2_grpc.py  hello_pb2.py  hello_pb2_grpc.py
scripts/: build.sh  run.sh
